Linked header links with sections on the page.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 
                     <ul>
                         <li><a href="#about">About Me</a></li>
-                        <li><a href="#experience">Experience</a></li>
                         <li><a href="#applications">Applications</a></li>
                         <li><a href="#contact">Contact Me</a></li>
                     </ul>
                 </nav>
             </header>   
        
-            <div class="container">
+            <div id="about" class="container">
 
                 <aside>
                     <h2> About Me </h2>
@@ -44,21 +43,7 @@
 
             </div>
 
-            <div class="container">
-
-                <aside>
-                    <h2> Experience </h2>
-                </aside>
-
-                <main class="box"> 
-                    <div class="one">One</div>
-                    <div class="one">Two</div>
-                    <div class="one">Three</div>
-                </main>
-
-            </div>
-
-            <div class="container">
+            <div id="applications"class="container">
 
                 <aside>
                     <h2> Applications </h2>
@@ -72,7 +57,7 @@
 
             </div>
 
-            <div class="container">
+            <div id="contact" class="container">
 
                 <aside>
                     <h2> Contact Me </h2>
